<resources>
    <string name="app_name">Android Guard</string>

    <!-- Strings related to setup activity -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">register device</string>
    <string name="action_sign_in_short">register</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_device_name">This device name is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_device_name">Device name</string>
    <string name="error_register_creds_error">Username/password error.\nPlease use the credentials you provided when you signed up at the website.</string>
    <string name="error_network_error_title">Internet connection error</string>
    <string name="error_network_error_message">Could not reach the application server.\nPlease check your internet connection and try again</string>
    <string name="warning_device_exists_title">Device already exists</string>
    <string name="warning_device_exists_message">The device name already exists on the server.\nDo you want to set this device to the same name anyway?</string>
    <string name="error_unknown_error">Unknown error occured</string>
    <string name="exit">Exit</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>

	<!-- Strings related to status activity -->
    <string name="status">Status</string>
    <string name="status_ok">connected</string>
    <string name="status_disconnected">disconnected</string>
    <string name="status_auth_problem">authentication problems</string>
    <string name="status_unkown_error">unkown error</string>
    <string name="status_ok_details">device is connected to the server and it is ready to receive commands.</string>
    <string name="status_disconnected_details">internet connection error, please check internet connection and try again.</string>
    <string name="status_auth_problem_details">something went wrong while trying to authenticate with the server.\nPlease try logging out, and registering the device again.</string>
    <string name="status_unkown_error_details">an unkown error occurred.</string>
    <string name="button_logout">logout</string>
    <string name="button_hide">enter stealth mode</string>
    <string name="button_hide_short">hide</string>
    <string name="button_show">show app</string>
    <string name="prompt_secret_number">secret dial number</string>
    <string name="secret_number_explanation">you can use your secret dial number (configured below) to access the application when it is hidden.\njust dial the secret number on your phone, and the hidden app will show up.\nyou can also use remote commands to show the application in case you lost your secret number.</string>
    <string name="dialog_positive_button">Ok</string>
    <string name="need_all_permissions">You need to grant access to all required permission to continue</string>
    <string name="error_permission_denied">Some Permission is denied, exiting. . .</string>
    <string name="google_play_services_error">fatal google play services error.\nunable to continue, exiting. . .</string>

</resources>
